# oficinas02

./: .gitignore  README.md  pyproject.toml
src/: db.sqlite3  logger.py  utils.py
src/backend/: settings.py  urls.py
src/polls/: admin.py  models.py  urls.py  views.py
src/polls/migrations/: 0001_initial.py  0002_product_image_path.py  0003_product_is_fruit.py
src/polls/services/: .order_processor.py.swp  balance.py  calibracao.json  openai_api.py  order_processor.py  pycamera.py
src/polls/templates/polls/: checkout.html  index.html  start.html
