[project]
name = "checkai"
version = "0.1.0"
description = ""
authors = [
    {name = "MateusSilva00",email = "mateus.2020@alunos.utfpr.edu.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)"
]

[tool.poetry]
packages = [{include = "checkai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
