[project]
name = "checkai"
version = "0.1.0"
description = ""
authors = [
    {name = "MateusSilva00",email = "mateus.2020@alunos.utfpr.edu.br"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "django (>=5.2,<6.0)",
    "openai (>=1.75.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "python-levenshtein (>=0.27.1,<0.28.0)",
    "ruff (>=0.11.12,<0.12.0)",
    "hx711 (>=1.1.2.3,<2.0.0.0)",
    "rpi-gpio (>=0.7.1,<0.8.0)",
    "pypix @ git+https://github.com/cleitonleonel/pypix.git",
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
